--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <div class="profile-info">
                         <div class="initial-circle zoom-in zoom-out">T</div>
                         <div class="name zoom-in zoom-out">Tuhfatul Izzah M., S. Pd</div>
-                        <div class="parents zoom-in zoom-out">Putri dari Bapak Marwan, S.H & Ibu Hj. Nurul Aini</div>
+                        <div class="parents zoom-in zoom-out">Putri dari Bapak H. Marwan, S.H & Ibu Hj. Nurul Aini</div>
                     </div>
                     <div class="role zoom-in zoom-out">The Bride</div>
                 </div>
