--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             <img id="playPauseButton" src="play.png" alt="Play" class="play-btn">
         </div>
 
-        <audio id="backgroundMusic" src="I Choose You - Ryann Darling.mp3"></audio>
+        <audio id="backgroundMusic" src="I Choose You - Ryann Darling.mpeg"></audio>
 
     </div>
     <script src="script.js"></script>
