--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                         <option value="Kehadiran" disabled selected>Konfirmasi Kehadiran</option>
                         <option value="Hadir">Hadir</option>
                         <option value="Tidak Hadir">Tidak Hadir</option>
-                        <option value="Ragu">Insyallah</option>
+                        <option value="Ragu">Ragu</option>
                     </select>
                 </div>
                 <button type="submit">Kirim</button>
@@ -217,7 +217,7 @@
             </div>
             <div class="attendance-item">
                 <span id="raguCount" class="attendance-number zoom-in zoom-out">0</span>
-                <span class="attendance-label zoom-in zoom-out">Insyallah</span>
+                <span class="attendance-label zoom-in zoom-out">Ragu</span>
             </div>
         </div>
     </div>
